<resources>
    <string name="app_name">Licenta</string>
    <string name="nume_utilizator_login">Nume utilizator</string>
    <string name="parola_login">Parola</string>
    <string name="conectare_login">Conectare</string>
    <string name="autentificare_login">Autentificare</string>
    <string name="creeaza_cont_login">Creeaza cont</string>
    <string name="inregistrare_signup">Inregistrare</string>
    <string name="nume_utilizator_signup">Nume utilizator</string>
    <string name="nume_de_familie_signup">Nume de familie</string>
    <string name="prenume_signup">Prenume</string>
    <string name="email_signup">Email</string>
    <string name="parola_signup">Parola</string>
    <string name="confirmare_parola_signup">Confirmare parola</string>
    <string name="creeare_cont_signup">Creeare cont</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_autentificare_esuata_logIn">Nume sau parola gresita</string>
    <string name="error_invalid_username">Numele de utilizator trebuie sa aiba cel putin 6 caractere</string>
    <string name="error_invalid_password">Parola trebuie sa aiba cel putin 6 caractere</string>
    <string name="error_username_over_max_char">Numele de utilizator trebuie sa abia maxim 15 caractere</string>
    <string name="error_password_over_max_char">Parola poate sa aiba maxim 20 de caractere</string>
    <string name="toast_criterii_neindeplinite">Unele criternii nu sunt indeplinite</string>
    <string name="toast_crietrii_autentificare_neindeplinite">Crieteii de autentificare neindeplinite</string>
    <string name="toast_criterii_neindeplinite_signUp">Criterii de creare cont neindeplinite</string>
    <string name="toast_cont_creat_succes">Contul a fost creat cu succes!</string>
    <string name="log_eroare_sign_up">Mai multi utilizatori cu aceelasi credentiale creati sau niciunul!</string>
    <string name="error_parole_nu_coincid">Parolele nu coincid</string>
    <string name="error_email_underMinChar">Emailul trebuie sa aiba cel putin 5 caractere</string>
    <string name="email_excedesMaxChar">Emailul trebuie sa aiba maxim 40 de caractere</string>
    <string name="error_email_format">Emailul trebuie sa fie de forma xxxx@xxx.xx</string>
    <string name="error_email_dejaInregistrat">Emailul este deja inregistrat</string>
    <string name="error_name_pesteMaxChar">Prenumele trebuie sa aiba maxim 40 de caractere</string>
    <string name="error_nume_subMinChar">Prenumele trebuie sa aiba cel putin 2 caractere</string>
    <string name="error_surname_maxChar">Numele trebuie sa aiba maxim 20 de caractere</string>
    <string name="error_surname_minChar">Numele trebuie sa aiba cel putin 2 caractere</string>
    <string name="error_username_existentDeja">Numele de utilizator este deja folosit</string>
    <string name="toast_press_back_toQuit">Apsati din nou pentru a inchide aplicatia</string>
    <string name="criterii_neindeplinite_postForumNou">Criterii de creare interventie forum neindeplinite</string>
    <string name="eroare_nextId_postForum">Eroare baza de date reporniti aplicatia</string>
    <string name="toast_creare_interventirForum_reusita">Interventie forum noua creata cu succes!</string>
    <string name="peste_creat_cu_succes">Pestele a fost creat cu succes!</string>
    <string name="error_title_below3char">Titlul trebuie sa aiba cel putin 3 caractere</string>
    <string name="error_title_aboce100char">Titlul trebuie sa aiba maxim 100 caractere</string>
    <string name="error_content_below5char">Continutul trebuie sa aiba cel putin 5 caractere</string>
    <string name="error_content_above500char">Continutul trebuie sa aiba maxim 500 caractere</string>
    <string name="log_nextForumPostId">Eroare next id pt creare interventie forum</string>
    <string name="title_createForumPost">Titlu</string>
    <string name="content_crearePostForum">Continut</string>
    <string name="creare_interventie_crearePostForum">Creare interventie</string>
    <string name="title_activity_burger_menu">burgerMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="email_ul_utilizatorului">Email ul utilizatorului</string>
    <string name="dummy_user_rowAdapterForumPost">Blex24</string>
    <string name="dummy_date_rowAdapterForumPost">11-12-2020</string>
    <string name="dummy_title_rowAdapterForumPost">Cum se da la peste?</string>
    <string name="dummy_content_rowAdapterForumPost">Donec eget massa id urna varius condimentum. Cras vitae ultrices dui, a imperdiet ex. Curabitur vehicula bibendum erat, et cursus massa. Phasellus quis porttitor nulla, tempor consequat sem. Aenean dictum leo et laoreet lacinia. In hac habitasse platea dictumst. Sed sodales est et metus luctus, eu gravida felis vestibulum.</string>
    <string name="dummy_nrLikes_rowAdapterForumPost">320</string>
    <string name="dummy_nrComments_rowAdapterForumPost">120</string>
    <string name="aminteste_ma">Aminteste-ma</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_setari">Setari</string>
    <string name="menu_adauga_un_peste">Adauga un peste</string>
    <string name="dummy_points_NavHeader">Puncte: 125</string>
    <string name="log_update_dislike2like_forumPostLvAdapter">Updateul dislike to like a modificat mai mult de un rand</string>
    <string name="log_delete_like_forumPostLvAdapter">Deletul de like a sters mai mult de un rand</string>
    <string name="log_insertLike_forumPostLvAdapter">Insertual de nou like a inserat mai mult de un rand</string>
    <string name="log_update_like2dislike_forumPostLvAdapter">Updateul de like to dislike a modificat mai mult de un rand</string>
    <string name="log_delete_dislike_forumPostLvAdapter">Deletul de dislike a sters mai mult de un rand</string>
    <string name="log_insertDislike_forumPostLvAdapter">Insertual de dislike a inserat mai mult de un rand</string>
    <string name="log_updateNrLikesDislikes_forum_forumPostLvAdapter">Updateul de nrlike nrdislike de la forum post a schimbat mai mult de un rand</string>
    <string name="log_updatePoints_user_forumPostLvAdapter">Updateul de points la useri a actualizat mai mult de un rand</string>
    <string name="enable_dark_mode">enable Dark mode</string>
    <string name="introduceti_greutatea_pestelui">Introduceti greutatea pestelui</string>
    <string name="introduceti_lungimea_pestelui">Introduceti lungimea pestelui</string>
    <string name="selectati_specia_pestelui">Selectati Specia Pestelui:</string>
    <string name="adaugati_un_peste">Adaugati un peste</string>
    <string name="profil">Profil</string>
    <string name="nume_de_utilizator">Nume de utilizator</string>
    <string name="email">Email</string>
    <string name="log_bad_insert_favourite_forumPostLvAdapter">Inserarea de post favorit a afectat mai mult de un rand!</string>
    <string name="log_bad_delete_favourite_forumPostLvAdapter">Stergerea de post favorit a afectat mai mult de un rand!</string>
    <string name="postari_favorite">Postari favorite</string>
    <string name="logout">Logout</string>
    <string name="salvati_modificari">Salvati modificari</string>
    <string name="doriti_sa_modificati_parola">Doriti sa modificati parola?</string>
    <string name="introduceti_noua_parola">Introduceti noua parola</string>
    <string name="confirmati_parola">Confirmati parola</string>
    <string name="anulati">Anulati</string>
    <string name="adaugati_o_poza_cu_pestele">Adaugati o poza cu pestele:</string>
    <string name="adaugare_imagine_peste">Adaugare imagine peste</string>
    <string name="lungime_peste">Lungime Peste :</string>
    <string name="ints">int</string>
    <string name="data_la_care_a_fost_prins">Data la care a fost prins</string>
    <string name="greutatea_pestelui">Greutatea Pestelui</string>
    <string name="poza_pestelui">poza pestelui</string>
    <string name="specie">Specie:</string>
    <string name="locatia_pestelui_prins">Locatia pestelui prins</string>
    <string name="locatia">Locatia</string>
    <string name="specia_pestelui">Specia Pestelui</string>
    <string name="vizualizati_lista_de_pesti_prinsi">Vizualizati lista de pesti prinsi</string>
    <string name="alegeti_data_cand_peste_a_fost_prins">Alegeti data cand peste a fost prins</string>
    <string name="log_nextId_comment">Eroare pe next id pentru comentariu</string>
    <string name="toast_comentariu_incorect">Comentariul nu indeplineste criteriile specificate</string>
    <string name="toast_comentariu_adaugat_succes">Comentariu adaugat cu succes!</string>
    <string name="toast_eroare_bd">Eroare baza de date</string>
    <string name="tagLog_insertNewComment_MoreThanOneRow">Insertul a adaugat mai mult de un comentariu!</string>
    <string name="error_comment_sub2Char">Comentariul trebuie sa aiba cel putin 2 caractere</string>
    <string name="error_comment_peste20Char">Comentariul trebuie sa aiba maximum 200 de caractere</string>
    <string name="log_update_dislike2like_commentLvAdapter">S-a modoficat mai mult de un rand la editarea dislike to like comment</string>
    <string name="log_deleteLike_commentLvAdapter">Stergerea like comment a modificat mai mult de un rand</string>
    <string name="log_insert_likeComment_commentLvAdapter">Inserarea de like comment a adaugat mai mult de un rand</string>
    <string name="log_update_like2dislike_commentLvAdapter">S-a modificat mai mult de un rand de la update like  to dislike comment</string>
    <string name="log_deleteDislike_commentLvAdapter">Stergerea de like comment a modificat mai mult de un rand</string>
    <string name="log_insertDislike_commentLvAdapter">Inserarea de dislike comment a inserat mai mult de un rand</string>
    <string name="dummy_tvPoints_commentRowAdapter">3233</string>
    <string name="dummy_tvUser_commentRowAdapter">Blex24</string>
    <string name="dummy_tvPostDate_commentRowAdapter">12-05-2021</string>
    <string name="dummy_tvContent_commentRowAdapter">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ultrices, erat id scelerisque facilisis, massa felis lobortis nisi, et vulputate massa ligula ac dolor. Etiam laoreet eros lorem, in,!</string>
    <string name="distanta_dintre_dvs_si_punctul_ales_este_de">Distanta dintre dvs si punctul ales este de:</string>
    <string name="distanta">distanta</string>
    <string name="km">km</string>
    <string name="titlu">Titlu</string>
    <string name="imagine_locatie">imagine Locatie</string>
    <string name="titlu_locatie">Titlu locatie</string>
    <string name="rating">Rating:</string>
    <string name="doriti_sa_planificati_o_drumetie">Doriti sa planificati o drumetie?</string>
    <string name="website">Website</string>
    <string name="ultimi_pesti_care_au_fost_prinsi_la_aceasta_balta">Ultimi pesti care au fost prinsi la aceasta balta:</string>
    <string name="textview">TextView</string>
    <string name="data">Data:</string>
    <string name="_100">100</string>
    <string name="umiditate">Umiditate:</string>
    <string name="probabilitate_de_precipitatii">Probabilitate de precipitatii:</string>
    <string name="_1001">100%</string>
    <string name="temperatura">Temperatura Zi:</string>
    <string name="procent">%</string>
    <string name="slash">/ Noapte:</string>
    <string name="imagine_vreme">imagine vreme</string>
</resources>