<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/menu_profil" />
        <item
            android:id="@+id/nav_setari"
            android:icon="@drawable/menu_settings"
            android:title="@string/menu_setari" />
        <item
            android:id="@+id/nav_adauga_peste"
            android:icon="@drawable/menu_fish"
            android:title="@string/menu_adauga_un_peste" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout" />

    </group>
</menu>